2021-03-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* components/sdcc.mk: re-enable parallel make in
	  regression tests

2021-01-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* lib/variables.mk: switch to new dcf hub server

2021-01-05 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* lib/upload.mk: --perms not --perm

2021-01-04 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* lib/upload.mk: configure upload group permissions directly with
	  rsync rather than ssh/chmod

2020-10-05 Philipp Klaus Krause <pkk AT spth.de>

	* lib/variables.mk:
	  Enable test of z80n, r2ka and r3ka ports.

2019-10-21 Philipp Klaus Krause <pkk AT spth.de>

	* lib/variables.mk:
	  Enable test of pdk15 port with --stack-auto.

2019-04-18 Philipp Klaus Krause <pkk AT spth.de>

	* lib/variables.mk:
	  Enable test of pdk15 port.

2019-03-15 Philipp Klaus Krause <pkk AT spth.de>

	* lib/variables.mk:
	  Enable test of pdk14 port.

2019-01-07 Philipp Klaus Krause <pkk AT spth.de>

	* lib/variables.mk:
	  Replace ucr3ka test by ez80-z80 test.

2018-10-25 Philipp Klaus Krause <pkk AT spth.de>

	* lib/variables.mk:
	  Enable regression testing for z80 with --reserve-regs-iy.

2018-08-22 Philipp Klaus Krause <pkk AT spth.de>

	* sdcc-build-bootstrap.sh:
	  Prefer gmake over make.

2018-08-22 Philipp Klaus Krause <pkk AT spth.de>

	* sdcc-build-bootstrap.sh:
	  Do not rely on non-portable sleep behaviour.

2018-06-12 Ben Shi <powerstudio1st AT 163 DOT com>

	* local/archlinux-respberrypi-3.mk:
	  Removed.
	* local/alarm.mk:
	  Renamed from for archlinux/raspberrypi-3.

2018-06-08 Ben Shi <powerstudio1st AT 163 DOT com>

	* local/archlinux-respberrypi-3.mk:
	  Add new makefile config for archlinux/raspberrypi3.

2018-06-01 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* lib/bootstrap.mk: mingw-w64 needs libwinpthread-1.dll

2018-05-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* components/sdcc.mk: skip valdiags testing under wine
